# steering-angle

./: .gitignore  .gitlab-ci.yml  A13.txt  CID-140-recording-2020-03-18_144821-selection.rec.csv  CMakeLists.txt  Dockerfile  Notes.txt  README.md  code_of_conduct.md  regression.py
.gitlab/issue_templates/: Bug.md  Requirement.md
.gitlab/merge_request_templates/: Bugfix.md  Feature.md  Refactoring.md
data/: data.csv  fifth_rec.csv  first_rec.csv  fourth_rec.csv  second_rec.csv  third_rec.csv
regression_script/: model.py
release/: Dockerfile
src/: CMakeLists.txt  Dockerfile  PrimeChecker.cpp  Test-helloworld.cpp  TestPrimeChecker.cpp  detect-cones.hpp  helloworld.cpp  main.cpp  main.hpp  template-opencv.cpp
src/cone_detection/: cone_detector.cpp  cone_detector.hpp
test/: test.py
